Another trial to fix the band title font size on mobile

--- a/style.css
+++ b/style.css
@@ -271,6 +271,10 @@ body {
     font-size: 14px;
     line-height: 20px;
   }
+  h2 {
+    font-size: 1.1em;
+    line-height: 1.2em;
+  }
 }
 
 /* line 9, sass/libs/_global.scss */
